<resources>
    <string name="app_name">AppStream</string>
    <string name="start_page">Volver a inicio</string>
    <string name="conectar">Conectarse con el servidor</string>
    <string name="Image_view">Imagen de la camara</string>
    <string name="Cam_0">Camara X</string>
    <string name="server_ip">IP del servidor</string>
    <string name="title_activity_nav_menu">LocalStream</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Francisco Martin</string>
    <string name="nav_header_subtitle">fmv1001@alu.ubu.es</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_disconnect">Desconectar</string>
    <string name="action_rec">Pulsa para grabar una secuencia de 10 segundos</string>
    <string name="cancel_button">Cancel</string>
    <string name="accept_button">Accept</string>
    <string name="menu_home">Home1</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_information">Information</string>
    <string name="menu_option_add">Add Camera</string>
    <string name="menu_option_del">Delete Camera</string>
    <string name="menu_option_stop">Stop Server</string>

    <string name="amplify_camera">Tumbe el dispositivo para una visión más amplia</string>

    <!-- Strings used for fragments for navigation -->
    <string name="example_ip">192.168.200.105</string>
    <string name="example_port">9999</string>
    <string name="example_name">Garage</string>

    <string name="new_ip">IP Cam</string>
    <string name="new_port">Port</string>
    <string name="new_name">Name</string>
    <string name="new_camera_dialog">Adding new camera</string>

</resources>