<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_camera"
        android:orderInCategory="100"
        android:title="@string/menu_option_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_del_camera"
        android:orderInCategory="100"
        android:title="@string/menu_option_del"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop_server"
        android:orderInCategory="100"
        android:title="@string/menu_option_stop"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect_to_server"
        android:orderInCategory="100"
        android:title="Disconnect"
        app:showAsAction="never" />
</menu>