<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="288dp"
        app:barrierMargin="@dimen/material_emphasis_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277">

        <TextView
            android:id="@+id/tv_newCameraIp"
            android:layout_width="117dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/new_ip"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_newCameraName" />

        <TextView
            android:id="@+id/tv_newCameraPort"
            android:layout_width="117dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/new_port"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_newCameraIp" />

        <EditText
            android:id="@+id/et_newCameraName"
            android:layout_width="170dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="@string/example_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/tv_newCameraName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_newCameraName"
            android:layout_width="117dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="72dp"
            android:text="@string/new_name"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_newCameraIp"
            android:layout_width="170dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/example_ip"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/tv_newCameraIp"
            app:layout_constraintTop_toBottomOf="@+id/et_newCameraName" />

        <Button
            android:id="@+id/acceptNewCameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/accept_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.768"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancelNewCameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/new_camera_dialog"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_newCameraPort"
            android:layout_width="70dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/tv_newCameraPort"
            app:layout_constraintTop_toBottomOf="@+id/et_newCameraIp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>